# oxibase

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  ROADMAP.md  STORED_PROCEDURES_PLAN.md  add_ast.patch  add_compiler.pl  add_ddl.pl  add_engine_seq.patch  add_engine_seq_impl.pl  add_field.pl  add_impl.pl  add_keywords.patch  add_license.sh  add_structs.patch  add_tests.pl  boa_execute.rs  cron_test.rs  ddl.rs.bak  debug.patch  find_end.pl  fix.py  fix.sql  fix2.py  fix3.py  fix4.py  fix5.py  fix6.py  fix7.py  fix8.py  fix9.py  fix_braces.pl  fix_clippy.pl  fix_ddl.pl  fix_dml.py  (+74 more)
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  jekyll-gh-pages.yml
.opencode/: ralph-history.json  ralph-loop.state.json
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: opencode.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
benches/: fk_insert.rs
demo-app/data/: 001_init.sql
demo-app/functions/: hello.rhai
demo-app/routes/: web.json
demo-app/templates/: index.html  layout.html
docs/: CNAME  Gemfile  README.md  _config.yml  index.html  index.md
docs/_bibliography/: references.bib
docs/_docs/: index.md  roadmap.md
docs/_includes/: head_custom.html  header_custom.html  mermaid_config.js  nav_footer_custom.html
docs/_layouts/: default.html
docs/blog/: index.html
docs/docs/: index.html
examples/: benchmark.rs  demo_server.rs  rhai_functions.rs  user_defined_functions.rs
ralph/: prd.json  progress.txt
scripts/: fix_copyrights.sh  help.sh  release.sh
specs/001-foreign-key/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  testing-plan.md
specs/002-fix-tx-update-fk/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-auto-api-layer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  test_coverage_plan.md
specs/004-db-routes-jinja/: analysis.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-review-issue-39/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-system-information-schema/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-stored-procedures/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/008-procedure-transactions/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/009-service-invocation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-event-triggers/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-script-engines/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-scripting-context/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/013-sql-sequences/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/014-job-scheduler/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/015-multiline-code-blocks/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/017-internal-logging/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/018-public-schema-fallback/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/019-drop-procedure/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/020-context-autocomplete/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/021-plsql-scalar-functions/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/022-autoincrement-alter/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/023-integrate-copy/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/024-generate-series/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/025-fix-schema-name-bug/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/026-fix-copy-schema-table/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/027-elaborate-existing-logs/: plan.md  spec.md  tasks.md
specs/028-metadata-api-workspace/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/029-metadata-api-workspace/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/029-opentelemetry-tracing/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/030-from-first-syntax/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/031-sql-railroad-diagrams/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/032-rename-routes-templates/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: lib.rs
static/: forum.css
templates/: base.html
tests/: adaptive_execution_test.rs  aggregate_functions_test.rs  aggregate_order_test.rs  aggregation_test.rs  as_of_test.rs  auto_increment_test.rs  autoincrement_alter_test.rs  bitmap_index_sql_test.rs  bitwise_operators_test.rs  boa_scripting_test.rs  btree_index_sql_test.rs  bug_unique_index_test.rs  bugs2_regression_test.rs  bugs3_regression_test.rs  bugs4_regression_test.rs  bugs5_regression_test.rs  bugs6_regression_test.rs  bugs7_regression_test.rs  bugs8_regression_test.rs  bugs9_regression_test.rs  bugs_regression_test.rs  cardinality_feedback_test.rs  case_expression_test.rs  cast_column_alias_test.rs  cast_simple_test.rs  cast_test.rs  cast_where_clause_test.rs  cli_create_app.rs  cli_seed.rs  coalesce_test.rs  collate_function_test.rs  collate_test.rs  column_alias_select_test.rs  column_alias_test.rs  column_alias_where_basic_test.rs  column_alias_where_test.rs  constraints_alter_test.rs  copy_from_test.rs  correlated_subquery_test.rs  count_aggregate_test.rs  (+134 more)
(+623 files in other folders)
