[package]
name = "oxibase"
version = "0.5.13"
edition = "2021"
authors = ["oxibase Contributors"]
description = "Autonomous relational database management system with MVCC, time-travel queries, and full ACID compliance"
license = "Apache-2.0"
repository = "https://github.com/oxibase/oxibase"
homepage = "https://oxibase.xyz"
documentation = "https://oxibase.xyz/"
readme = "README.md"
keywords = ["database", "sql", "embedded", "mvcc", "acid"]
categories = ["database", "database-implementations"]

[lib]
name = "oxibase"
path = "src/lib.rs"

[[bin]]
name = "oxibase"
path = "src/bin/oxibase.rs"
required-features = ["cli"]

[dependencies]
# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Concurrency
parking_lot = "0.12"
dashmap = "6.2"
crossbeam = "0.8"
rayon = "1.12"

# Async (for pg-server and server)
tokio = { version = "1.50", features = ["full"], optional = true }

# Web server (optional)
axum = { version = "0.8", features = ["ws"], optional = true }
tower-http = { version = "0.6", features = ["cors", "trace"], optional = true }
minijinja = { version = "2", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI (optional)
clap = { version = "4.6", features = ["derive"], optional = true }
rustyline = { version = "18.0", optional = true }
comfy-table = { version = "7.2", optional = true }
dirs = { version = "6.0", optional = true }

# Checksums for data integrity
crc32fast = "1.4"

# Compression
lz4_flex = "0.13"

# Scripting backends for user-defined functions
rhai = { version = "1.25", features = ["sync", "internals", "debugging", "metadata", "serde"] }

rustpython-vm = { version = "0.5", optional = true }

# Utilities
bytes = "1.11"
smallvec = "1.11"
ordered-float = "5.3"
indexmap = "2.1"
rustc-hash = "2.1"
memchr = "2.8"
regex = "1.12"
radsort = "0.1"  # Radix sort - O(n) for integer keys
rand = "0.10"  # Random number generation for RANDOM() function
ahash = "0.8"  # Fast hash for hash indexes (~30 GB/s, DOS-resistant)
roaring = "0.11"  # Compressed bitmap indexes (used by Lucene, Druid, Spark)
cron = "0.16"
crossbeam-channel = "0.5.15"
csv = "1.4.0"
opentelemetry = "0.32.0"
opentelemetry_sdk = { version = "0.32.1", features = ["experimental_async_runtime", "rt-tokio"] }
opentelemetry-otlp = { version = "0.32.0", features = ["grpc-tonic", "trace"] }
tracing-opentelemetry = "0.33.0"

# Platform-specific file locking
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_IO"] }

[dev-dependencies]
axum = "0.8"
criterion = { version = "0.8", features = ["html_reports"] }
http-body-util = "0.1.3"
proptest = "1.11"
tempfile = "3.27"
tower = { version = "0.5.3", features = ["util"] }

[features]
default = ["cli", "rhai", "server"]
cli = ["clap", "rustyline", "comfy-table", "dirs"]
pg-server = ["tokio"]
server = ["tokio", "axum", "tower-http", "minijinja"]
simd = []  # Enable SIMD optimizations
rhai = []  # Rhai scripting backend (always enabled)

python = ["rustpython-vm"]  # Python backend

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
debug = true  # Enable debug symbols for profiling

[profile.bench]
lto = true
codegen-units = 1

# CI test profile: faster compile, less disk usage
[profile.ci]
inherits = "release"
lto = "thin"          # Much faster than full LTO
codegen-units = 16    # Parallel codegen
debug = false         # No debug symbols needed for tests
